<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/posterImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/all"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/img" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gradient" />

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/video_player"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
        </com.google.android.youtube.player.YouTubePlayerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="320dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/video_player">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Ejercicio1"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/btn1" />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=" Ejercicio2 2"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/btn1" />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Ejercicio2"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/btn1" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/ic_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView4">


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_star_center_outline" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/rating"
                android:textColor="@color/yellow"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textColor="@color/red"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/black_50" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>